# client_v2_jcs

./: auth_handler.py  create_request.py  requirements.txt  setup.cfg
client_v2_jcs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  top_level.txt
jcs_neutron/: .jcs_iam_client.py.swp  README.md  create_iam_creds.py  create_iam_req.py  create_neutron_req.py  jcs_iam_client.py  rds_use_case  working_iam_request.txt
vpcclient/: auth_handler.py  vpcclient.py
