[metadata]
name = vpcclient
summary = VPC JCS API Client
license = Apache License, Version 2.0
author = Ananth Kaushik, Harsh Desai
author-email = harsh1.desai@ril.com
home-page = https://github.com/JioCloudVPC/client_v2_jcs
classifier =
    Development Status :: 1 -Dev
    Environment :: Console
    Environment :: AWS
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    vpcclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    vpcclient = vpcclient.vpcclient:main

[wheel]
universal = 1

